Fix symfony/security-csrf version

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "symfony/property-access": "^4.4|^5.0",
         "symfony/routing": "^4.4|^5.0",
         "symfony/security-bundle": "^4.4|^5.0",
+        "symfony/security-csrf" : "^4.4|^5.0",
         "symfony/translation": "^4.4|^5.0",
         "symfony/twig-bridge": "^4.4|^5.0",
         "symfony/twig-bundle": "^4.4|^5.0",
